--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
-    --botão-azul-efeito: #3c92fa;
+    --botão-azul-efeito: #9b6bf5;
 }
 
 body {
